[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "regression"
authors = [{name = "Somayeh Motevalli", email = "somayeh.motevalli@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies= [
    "matplotlib",
    "numpy",
    "pandas"
    "scikit-learn",
    "pytest"
]